# neurorule

./: README.md  test.py
evolution-service/: .dockerignore  .flake8  .gitignore  .pylintrc  LICENSE.txt  MANIFEST.in  README.md  kube_admin_Dockerfile  kube_admin_codefresh.yaml  kube_admin_docker_README.md  kube_admin_letsencrypt_README.md  pyproject.toml  requirements-build.txt  requirements-private.txt  requirements.txt
evolution-service/build_scripts/: Dockerfile  ESP-integration-tests-master.yml  codefresh.yml  copyright_config.json  entrypoint.sh  get_leaf_common_version.sh  green-blue.sh  run_pylint.sh  run_shellcheck.sh  source_available_copyright.txt
evolution-service/build_scripts/healthcheck/: codefresh.yaml  esp_example.py  experiment_params.hocon
evolution-service/deployment/: kops-cluster-name.platform.cluster.k8s.local.yaml
evolution-service/deployment/EKScluster/: Cluster-delete.md  Cluster-install-with-helm.md  cluster.yaml  namespaces.yaml  nodegroup-c6a-4xlarge.yaml
evolution-service/deployment/base/: deployment.yaml
evolution-service/deployment/example/: README.md  gateway.yaml  kustomization.yaml  signed-gateway.yaml  versions.yaml
evolution-service/deployment/infrastructure/: auth.yaml  auth_v3.yaml  authorization.yaml  honey.yaml  kustomization.yaml  namespace.yaml  service.yaml  service_v3.yaml
evolution-service/deployment/overlays/: kustomization.yaml
evolution-service/esp_service/logging/: message_types.py  structured_message.py
evolution-service/esp_service/persistence/: esp_checkpoint_id.py  esp_service_persistor.py  local_bytes_persistence.py  local_esp_persistor.py  null_esp_persistor.py  s3_bytes_persistence.py  s3_esp_persistor.py  server_elites_persistence.py
evolution-service/esp_service/population/: candidate_util.py  population.py
evolution-service/esp_service/schema/: config_schema_validator.py  experiment_params_schema.json  experiment_params_schema_loader.py  schema_validator.py
evolution-service/esp_service/selection/: individual_validator.py  novelty_rearranger.py  nsga_2_parent_selector.py  parent_selector.py  parent_selector_factory.py  selection.py  single_objective_parent_selector.py
evolution-service/esp_service/session/: direct_esp_population_session.py  distributed_elites_manager.py  population_operations.py  system_info.py
evolution-service/evolution_server/protos/: population_service.proto  system_info_service.proto
evolution-service/evolution_server/python/: generate.sh
evolution-service/evolution_server/tests/: __init__.py
evolution-service/tests/adapters/: test_adapters.py
evolution-service/tests/fixtures/: experiment_params_multi_hidden.json
evolution-service/tests/persistence/: test_common.py  test_esp_checkpoint_id.py  test_local_bytes_persistence.py  test_local_esp_persistor.py  test_null_esp_persistor.py  test_s3_bytes_persistence.py  test_s3_esp_persistor.py
evolution-service/tests/reproduction/: test_generation.py
evolution-service/tests/selection/: test_individual_validator.py  test_novelty.py  test_nsga_2_parent_selector.py  test_single_objective_parent_selector.py
evolution-service/tests/session/: test_population_operations.py  test_system_info.py
leaf-common/: .flake8  .gitignore  .pylintrc  LICENSE.txt  NOTICE.txt  README.md  __init__.py  pyproject.toml  requirements.txt
leaf-common/.github/workflows/: codeql.yml  publish.yml  tests.yml
leaf-common/build_scripts/: copyright_config.json  run_flake8.sh  run_pylint.sh  source_available_copyright.txt
leaf-common/leaf_common/asyncio/: async_to_sync_generator.py  asyncio_executor.py  asyncio_executor_pool.py
leaf-common/leaf_common/candidates/: constants.py  representation_types.py
leaf-common/leaf_common/config/: config_filter.py  config_filter_chain.py  config_handler.py  dictionary_overlay.py  environment_defaults.py  file_of_class.py  resolver.py  resolver_util.py
leaf-common/leaf_common/evaluation/: component_evaluator.py  metrics_merger.py
leaf-common/leaf_common/filters/: composite_string_filter.py  inclusionary_replacement_string_filter.py  replacement_string_filter.py  sanitizer_util.py  string_filter.py  strip_whitespace_string_filter.py  tensorflow_field_name_filter.py
leaf-common/leaf_common/fitness/: candidate_metrics_provider.py  cmp_to_key.py  comparator.py  fitness_objective.py  fitness_objectives.py  fitness_objectives_builder.py  fitness_objectives_from_config.py  metrics_based_individual_comparator.py  metrics_provider.py  none_comparator.py  number_comparator.py  reversed_comparator.py
leaf-common/leaf_common/log_utils/: message_type.py  structured_message.py
leaf-common/leaf_common/logging/: example_logging_config.hocon  logging_setup.py  stream_to_logger.py
leaf-common/leaf_common/parsers/: boolean_list_parser.py  boolean_parser.py  canonical_multi_config_parser.py  dictionary_extractor.py  field_extractor.py  list_parser.py  parser.py  string_parser.py
leaf-common/leaf_common/progress/: composite_progress_reporter.py  iterating_progress_reporter.py  json_progress_reporter.py  progress_reporter.py  status_dict_progress_reporter.py  worker_progress_reporter.py
leaf-common/leaf_common/session/: abstract_service_session.py  async_abstract_service_session.py  async_grpc_client_retry.py  extension_packaging.py  grpc_channel_security.py  grpc_client_retry.py  grpc_metadata_util.py  population_response_dictionary_converter.py  population_session.py  population_session_factory.py  response_candidate_dictionary_converter.py
leaf-common/leaf_common/time/: time_util.py  timeout.py  timeout_reached_exception.py
leaf-common/leaf_common/utils/: async_atomic_counter.py  atomic_counter.py
leaf-common/tests/config/: dictionary_overlay_test.py
pyleafai/: .flake8  LICENSE.txt  README.md  pyproject.toml  requirements-build.txt  requirements.txt
pyleafai/build_scripts/: Dockerfile  codefresh.yml  copyright_config.json  proprietary_copyright.txt  pylintrc  release.sh  run_pylint.sh  source_available_copyright.txt  trade_secret_copyright.txt  update_copyrights.sh
pyleafai/pyleafai/: NOTICE.txt
(+1411 files in other folders)
