# These bits are assembled from (largely) following the guidance here:
# https://packaging.python.org/en/latest/overview/

[build-system]
requires = ["setuptools>=61.0", "wheel","setuptools-scm==8.1.0"]
build-backend = "setuptools.build_meta"
 
[project]
name = "esp-service"
authors = [
    { name="The LEAF Team", email="LEAFDL@cognizant.com" }
]
description = "LEAF Evolution Service Package"
keywords = ["evolution", "ESP"]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",

    # We still need to classify our academic license
    # "License :: XXX :: XXX"
]
# "dynamic" says we are going to get these project properties by dynamic means.
# More on each below
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
# Specify the dependencies for the library from what is given in requirements.txt
dependencies = {file = ["requirements.txt"]}

# Note that the requirements.txt dependencies do not include private dependencies
# on purpose.  We acknowledge them with the entry below, but that doesn't really
# do anything for packaging.
optional-dependencies = {dev = {file = ["requirements-private.txt"]}}

[tool.setuptools.packages.find]
# Standard setup has source existing under /src directory.
# That's not what we tend to do.
# Ours is more of what is called a "flat-layout", so be explicit about that.
where = ["."]
# namespaces = false
# Note: package_data is not useful here for packaging up non-python files.
#       See MANIFEST.in instead.
exclude = ["tests*", "build_scripts*", "deployment*", "evolution_server*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Include these files in the package. They need to be installed with the package.
# IMPORTANT: also add it to MANIFEST.in so that it gets included in the source distribution.
schema = ["experiment_params_schema.json"]

[tool.setuptools_scm]
fallback_version = "0.0.1"

[project.urls]
Homepage = "https://github.com/leaf-ai/evolution-service"
Repository = "https://github.com/leaf-ai/evolution-service"
